--- a/ToyProjectManagementApp/Views/Cell/NotificationCell.xib
+++ b/ToyProjectManagementApp/Views/Cell/NotificationCell.xib
@@ -9,11 +9,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="NotificationCell" rowHeight="127" id="QU3-qj-JYH" customClass="NotificationCell" customModule="ToyProjectManagementApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="408" height="127"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="NotificationCell" rowHeight="76" id="QU3-qj-JYH" customClass="NotificationCell" customModule="ToyProjectManagementApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="408" height="76"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="QU3-qj-JYH" id="fIB-O0-zIa">
-                <rect key="frame" x="0.0" y="0.0" width="408" height="127"/>
+                <rect key="frame" x="0.0" y="0.0" width="408" height="76"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="create" translatesAutoresizingMaskIntoConstraints="NO" id="Zeq-xq-YDp">
@@ -23,51 +23,37 @@
                             <constraint firstAttribute="height" constant="30" id="pbX-Ev-9te"/>
                         </constraints>
                     </imageView>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="j7j-LY-1MM">
-                        <rect key="frame" x="58" y="10" width="336" height="107"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="project Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IcP-Db-JK2">
-                                <rect key="frame" x="0.0" y="0.0" width="336" height="20.333333333333332"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="pui-9P-PlT">
-                                <rect key="frame" x="0.0" y="30.333333333333332" width="336" height="46.333333333333343"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="249" text="content" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WLd-Xq-Wkl">
-                                        <rect key="frame" x="0.0" y="0.0" width="336" height="46.333333333333336"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                            </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fyz-4c-3Mo">
-                                <rect key="frame" x="0.0" y="86.666666666666671" width="336" height="20.333333333333329"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                    </stackView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="249" text="content" textAlignment="natural" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WLd-Xq-Wkl">
+                        <rect key="frame" x="58" y="10.000000000000002" width="336" height="17.666666666666671"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="751" text="date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fyz-4c-3Mo">
+                        <rect key="frame" x="58" y="41.666666666666664" width="336" height="20.333333333333336"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="Zeq-xq-YDp" firstAttribute="leading" secondItem="fIB-O0-zIa" secondAttribute="leading" constant="14" id="0vB-xp-bNe"/>
-                    <constraint firstItem="j7j-LY-1MM" firstAttribute="top" secondItem="Zeq-xq-YDp" secondAttribute="top" id="9Kf-Y3-EI9"/>
-                    <constraint firstAttribute="bottom" secondItem="j7j-LY-1MM" secondAttribute="bottom" constant="10" id="9No-h0-zKV"/>
+                    <constraint firstItem="fyz-4c-3Mo" firstAttribute="trailing" secondItem="WLd-Xq-Wkl" secondAttribute="trailing" id="1js-tv-NQg"/>
+                    <constraint firstItem="fyz-4c-3Mo" firstAttribute="leading" secondItem="WLd-Xq-Wkl" secondAttribute="leading" id="9DM-EP-2ex"/>
                     <constraint firstItem="Zeq-xq-YDp" firstAttribute="top" secondItem="fIB-O0-zIa" secondAttribute="top" constant="10" id="GNO-mr-v9i"/>
-                    <constraint firstAttribute="trailing" secondItem="j7j-LY-1MM" secondAttribute="trailing" constant="14" id="Gdj-1F-bMN"/>
-                    <constraint firstItem="j7j-LY-1MM" firstAttribute="leading" secondItem="Zeq-xq-YDp" secondAttribute="trailing" constant="14" id="bcA-Sc-chE"/>
+                    <constraint firstItem="WLd-Xq-Wkl" firstAttribute="top" secondItem="Zeq-xq-YDp" secondAttribute="top" id="IDk-Qa-ez0"/>
+                    <constraint firstItem="WLd-Xq-Wkl" firstAttribute="leading" secondItem="Zeq-xq-YDp" secondAttribute="trailing" constant="14" id="T9a-HS-2dM"/>
+                    <constraint firstAttribute="trailing" secondItem="WLd-Xq-Wkl" secondAttribute="trailing" constant="14" id="oHj-2O-jac"/>
+                    <constraint firstAttribute="bottom" secondItem="fyz-4c-3Mo" secondAttribute="bottom" constant="14" id="wdr-Es-Xue"/>
+                    <constraint firstItem="fyz-4c-3Mo" firstAttribute="top" relation="greaterThanOrEqual" secondItem="WLd-Xq-Wkl" secondAttribute="bottom" constant="14" id="zeh-kV-LNH"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="notificaionImageView" destination="Zeq-xq-YDp" id="Bh7-GP-3CW"/>
-                <outlet property="notificatioinProjectTitleLabel" destination="IcP-Db-JK2" id="PP3-eC-Jpp"/>
                 <outlet property="notificationContentLabel" destination="WLd-Xq-Wkl" id="rs7-Vu-Zxc"/>
                 <outlet property="notificationDateLabel" destination="fyz-4c-3Mo" id="9Tu-4Q-WEx"/>
             </connections>
-            <point key="canvasLocation" x="312.97709923664121" y="-184.1549295774648"/>
+            <point key="canvasLocation" x="312.97709923664121" y="-202.11267605633805"/>
         </tableViewCell>
     </objects>
     <resources>
