--- a/ToyProjectManagementApp/Views/ThirdTabbar.storyboard
+++ b/ToyProjectManagementApp/Views/ThirdTabbar.storyboard
@@ -75,7 +75,9 @@
                             <constraint firstItem="5FV-Ts-Kl9" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="14" id="qBA-Ie-amR"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="알림" image="notification" selectedImage="notificataionFill" id="6wf-1r-h1E"/>
+                    <tabBarItem key="tabBarItem" title="알림" image="notification" badgeValue="10" selectedImage="notificataionFill" springLoaded="YES" id="6wf-1r-h1E">
+                        <color key="badgeColor" systemColor="systemRedColor"/>
+                    </tabBarItem>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="notificationAlertLabel" destination="pbW-TK-Hvd" id="VGH-EZ-3HY"/>
@@ -94,6 +96,9 @@
         <image name="notification" width="23.333333969116211" height="23.333333969116211"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
