--- a/ToyProjectManagementApp/Views/ThirdTabbar.storyboard
+++ b/ToyProjectManagementApp/Views/ThirdTabbar.storyboard
@@ -5,7 +5,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,36 +17,48 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="알림" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5FV-Ts-Kl9">
-                                <rect key="frame" x="14.000000000000002" y="73" width="29.666666666666671" height="20.333333333333329"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Trc-aZ-S7y">
-                                <rect key="frame" x="14" y="113.33333333333331" width="364.66666666666669" height="33"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BCU-ge-P0i">
+                                <rect key="frame" x="14" y="73" width="64.666666666666671" height="34.333333333333343"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="알림 수" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pbW-TK-Hvd">
-                                        <rect key="frame" x="0.0" y="6.333333333333341" width="48.666666666666664" height="20.333333333333329"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="알림" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5FV-Ts-Kl9">
+                                        <rect key="frame" x="0.0" y="0.0" width="29.666666666666668" height="34.333333333333336"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8uB-Cx-oAE">
-                                        <rect key="frame" x="56.666666666666686" y="0.0" width="308" height="33"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                        <state key="normal" title="알림 지우기">
-                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </state>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Kk-Ly-vdl">
+                                        <rect key="frame" x="29.666666666666664" y="0.0" width="34.999999999999993" height="34.333333333333336"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="35" id="aTg-X5-Sph"/>
+                                        </constraints>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="chevron.down" catalog="system"/>
                                         <connections>
-                                            <action selector="tapRemoveNotificationModel:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="JU8-fY-tFr"/>
+                                            <action selector="tabNotificationMenu:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="3tX-bJ-NwT"/>
                                         </connections>
                                     </button>
                                 </subviews>
                             </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="Trc-aZ-S7y">
+                                <rect key="frame" x="14" y="121.33333333333333" width="364.66666666666669" height="20.333333333333329"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="0개의 알림" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pbW-TK-Hvd">
+                                        <rect key="frame" x="0.0" y="0.0" width="73.666666666666671" height="20.333333333333332"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(알림은 10개까지만 저장됩니다)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NLw-hg-4Eu">
+                                        <rect key="frame" x="75.666666666666686" y="0.0" width="289" height="20.333333333333332"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="KWT-iD-i6U">
-                                <rect key="frame" x="0.0" y="166.33333333333331" width="393" height="602.66666666666674"/>
+                                <rect key="frame" x="0.0" y="161.66666666666669" width="393" height="607.33333333333326"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="P5V-uK-K3m">
@@ -66,13 +77,13 @@
                         <constraints>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="Trc-aZ-S7y" secondAttribute="trailing" constant="14.333333333333314" id="6nJ-Vl-4wL"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="KWT-iD-i6U" secondAttribute="trailing" id="7ok-Vs-tfc"/>
-                            <constraint firstItem="Trc-aZ-S7y" firstAttribute="leading" secondItem="5FV-Ts-Kl9" secondAttribute="leading" id="Hog-3K-pub"/>
-                            <constraint firstItem="5FV-Ts-Kl9" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="14" id="L3c-fw-uwV"/>
-                            <constraint firstItem="Trc-aZ-S7y" firstAttribute="top" secondItem="5FV-Ts-Kl9" secondAttribute="bottom" constant="20" id="QpU-sE-DSY"/>
+                            <constraint firstItem="Trc-aZ-S7y" firstAttribute="top" secondItem="BCU-ge-P0i" secondAttribute="bottom" constant="14" id="8HP-IG-31S"/>
+                            <constraint firstItem="BCU-ge-P0i" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="14" id="QDY-0U-cmO"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="KWT-iD-i6U" secondAttribute="bottom" id="eBq-dW-vPd"/>
                             <constraint firstItem="KWT-iD-i6U" firstAttribute="top" secondItem="Trc-aZ-S7y" secondAttribute="bottom" constant="20" id="g8D-tW-PVk"/>
+                            <constraint firstItem="pbW-TK-Hvd" firstAttribute="leading" secondItem="BCU-ge-P0i" secondAttribute="leading" id="l5r-W5-BnG"/>
                             <constraint firstItem="KWT-iD-i6U" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="luC-IC-EMs"/>
-                            <constraint firstItem="5FV-Ts-Kl9" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="14" id="qBA-Ie-amR"/>
+                            <constraint firstItem="BCU-ge-P0i" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="14" id="r7Z-nI-ybY"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="알림" image="notification" selectedImage="notificataionFill" springLoaded="YES" id="6wf-1r-h1E">
@@ -81,9 +92,10 @@
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="notificationAlertLabel" destination="pbW-TK-Hvd" id="VGH-EZ-3HY"/>
+                        <outlet property="notificationContentLabel" destination="NLw-hg-4Eu" id="Tm1-3f-GoE"/>
+                        <outlet property="notificationMenuButton" destination="9Kk-Ly-vdl" id="H2d-Dq-NIg"/>
                         <outlet property="notificationTableView" destination="KWT-iD-i6U" id="yUY-Ag-Nvp"/>
                         <outlet property="notificationTitleLabel" destination="5FV-Ts-Kl9" id="iow-ed-Lhu"/>
-                        <outlet property="removeNotificationModelButton" destination="8uB-Cx-oAE" id="A0S-BM-lA2"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -92,6 +104,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="chevron.down" catalog="system" width="128" height="70"/>
         <image name="notificataionFill" width="23.333333969116211" height="23.333333969116211"/>
         <image name="notification" width="23.333333969116211" height="23.333333969116211"/>
         <systemColor name="systemBackgroundColor">
